Fix: Fix: bug on resizing of background images on mobile devices not scaling properly. css elements rewritten to include background-size rule.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,7 @@
 
 .banner-image {
   background: url("../images/hero_surgery.png") center center/cover no-repeat fixed;
+  background-size: 100% auto;
   height: 90vh;
 }
 
